add vpc creation for aws infrastructure. move file subrouter to openapi from api
