# docs/swagger.json
@@ -80,7 +80,7 @@
                 }
             }
         },
-        "/api/complaints/": {
+        "/api/complaint/": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -193,7 +193,7 @@
                 }
             }
         },
-        "/api/complaints/ban-event": {
+        "/api/complaint/ban-event": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -253,7 +253,7 @@
                 }
             }
         },
-        "/api/complaints/ban-user/{id}": {
+        "/api/complaint/ban-user/{id}": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -1697,6 +1697,66 @@
                 "responses": {
                     "200": {
                         "description": "OK"
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/Kurajj_internal_models.ErrResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/Kurajj_internal_models.ErrResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/Kurajj_internal_models.ErrResponse"
+                        }
+                    },
+                    "408": {
+                        "description": "Request Timeout",
+                        "schema": {
+                            "$ref": "#/definitions/Kurajj_internal_models.ErrResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/Kurajj_internal_models.ErrResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/open-api/file/": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Help Event"
+                ],
+                "summary": "CreateNotification new comment in help event",
+                "parameters": [
+                    {
+                        "description": "query params",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/Kurajj_internal_models.CommentCreateRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/Kurajj_internal_models.CreationResponse"
+                        }
                     },
                     "401": {
                         "description": "Unauthorized",
